--- a/style.css
+++ b/style.css
@@ -86,13 +86,14 @@ a {
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
-  scrollbar-width: smooth;
+  scrollbar-width: none;
+
   scroll-behavior: smooth;
   background: linear-gradient(180deg, #f7fbff 0%, #eaf4ff 55%, #ffffff 100%);
   color: var(--text-dark);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  overflow-x: none;
 }
 
 /* Rotating soft gradient in header */
@@ -354,7 +355,8 @@ p.lead {
 .service,
 .about,
 .appointment {
-  margin: 5rem;
+  margin: 50px 20px 50px 20px;
+
   background: #fff;
   border-radius: 25px;
 }
