--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   transform: translateY(0px);
   opacity: 1;
 }
-
+/* 
 .animationL,
 .animationR {
   opacity: 0;
@@ -26,7 +26,7 @@
   position: relative;
   opacity: 1;
   animation: slideRight 1s ease-in-out 1;
-}
+} */
 @keyframes slideleft {
   from {
     left: -300px;
@@ -159,15 +159,10 @@ body {
   position: relative;
   opacity: 1;
   animation: slideleft 1s ease-in-out 1;
-  padding: 18px;
+
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(
-    180deg,
-    rgba(13, 110, 253, 0.16),
-    rgba(13, 110, 253, 0.01)
-  );
 }
 .doctor-img {
   max-width: 100%;
@@ -396,7 +391,7 @@ p.lead {
   font-weight: 600;
   font-size: 1.3rem;
   margin-bottom: 0.5rem;
-  color: #222;
+  color: #f00;
 }
 .service-text {
   font-size: 0.95rem;
@@ -405,7 +400,7 @@ p.lead {
 }
 
 /* contact map card */
-.map-card {
+.map-card > img {
   border-radius: 12px;
   overflow: hidden;
   border: 1px solid rgba(8, 51, 90, 0.04);
@@ -520,16 +515,17 @@ footer {
   font-weight: 600;
   font-size: 1.1rem;
   margin-top: 5px;
-  color: #0d2c54;
+
+  color: #ff0000;
 }
 
 /* Awards Icons */
 .award-icons img {
-  height: 70px;
-  width: 70px;
+  /* height: 70px; */
+  width: 100px;
   border-radius: 50%;
   background: white;
-  padding: 12px;
+  /* padding: 12px; */
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
   transition: all 0.3s ease;
 }
