--- a/style.css
+++ b/style.css
@@ -402,8 +402,8 @@ p.lead {
 /* contact map card */
 .map-card > img {
   border-radius: 12px;
-  overflow: hidden;
-  border: 1px solid rgba(8, 51, 90, 0.04);
+  /* overflow: hidden; */
+  /* border: 1px solid rgba(8, 51, 90, 0.04); */
 }
 
 /* footer =======================================================================================*/
